<resources>
    <string name="app_name">Mobile Store</string>
    <string name="dieu3">Địa điểm giao hàng là địa chỉ của Mobile Store Express trừ khi có thỏa thuận khác nêu rõ trong Đơn hàng. Tùy theo tính chất hàng hóa dịch vụ, chứng từ giao hàng sẽ gồm có:  Hoá đơn GTGT, phiếu đóng gói, phiếu giao hàng, vận đơn, chỉ dẫn an toàn hóa chất, chứng chỉ chất lượng, chứng nhận xuất xứ, báo cáo xác nhận dịch vụ, và các chứng từ khác nếu được qui định tại Đơn hàng. Hóa đơn và phiếu đóng gói phải ghi rõ số Đơn hàng, điều kiện giao hàng và xuất xứ hàng hóa. Trước ngày giao hàng ít nhất 03 ngày làm việc, nhà cung cấp phải gửi thông báo giao hàng tới Mobile Store.</string>
    <string name="dieu_0">Các điều kiện và điều khoản này là một phần không tách rời của Đơn hàng. Đơn hàng của Mobile Store và các điều kiện, thay đổi khác nếu có phải được lập bằng văn bản. Nhà cung cấp sẽ ký, đóng dấu và gửi xác nhận Đơn hàng đến cho Mobile Store qua email Bất kỳ điều khoản nào của nhà cung cấp sẽ chỉ trở thành một phần điều kiện của Đơn hàng sau khi có sự chấp thuận bằng văn bản của Mobile Store.</string>
    <string name="dieu_1">Giá nêu trong Đơn hàng chưa bao gồm Thuế giá trị gia tăng và bất kỳ các loại thuế phí nào khác, trừ khi có qui định khác được nêu rõ trong Đơn hàng.</string>
    <string name="dieu_2">Thanh toán, nếu không có quy định khác được ghi rõ ràng trong hợp đồng, sẽ được thực hiện trong vòng 60 ngày kể từ ngày giao hàng được chấp nhận, và nhận hóa đơn. Nhà cung cấp chỉ được bù trừ thanh toán với các khiếu nại đã được Mobile Store đồng ý giải quyết, hoặc theo luật quy định.</string>

    <string name="dieu_4">Mọi thông tin bằng văn bản do Mobile Store cung cấp theo hoặc liên quan đến Đơn hàng được coi là tài sản của Mobile Store. Nhà cung cấp có nghĩa vụ bảo mật mọi thông tin về kỹ thuật, khoa học công nghệ, và hoạt động kinh doanh hoặc các thông tin liên quan khác của Mobile Store ngay cả sau khi quan hệ hợp đồng giữa hai bên đã chấm dứt. Nhà cung cấp không được tiết lộ bất cứ thông tin nào cho bên thứ ba mà không được chấp thuận trước bằng văn bản của Mobile Store.</string>
    <string name="dieu_5">Nhà cung cấp đảm bảo cho Mobile Store không phải bồi thường và không có bất kỳ trách nhiệm nào đối với các khiếu nại của bên thứ ba liên quan đến việc phân phối hoặc cung cấp các dich vụ của Nhà cung cấp, bao gồm cả các khiếu nại về trách nhiệm sản phẩm hay bảo vệ môi trường hay vi phạm sở hữu công nghiệp nếu có. Nhà cung cấp chịu trách nhiệm thực hiện các biện pháp khắc phục bao gồm cả thông báo công khai và thu hồi hàng.</string>
    <string name="dieu_6">Khi hai bên hoàn thành đầy đủ nghĩa vụ của mình đối với hợp đồng, công nợ đã được thanh toán dứt điểm và hai bên không có khiếu nại thì hợp đồng coi như là đã thanh lý.</string>

    <string name="phone_info">iPhone 13 Pro Max 128 GB - siêu phẩm được mong chờ nhất ở nửa cuối năm 2021 đến từ Apple. Máy có thiết kế không mấy đột phá khi so với người tiền nhiệm, bên trong đây vẫn là một sản phẩm có màn hình siêu đẹp, tần số quét được nâng cấp lên 120 Hz mượt mà, cảm biến camera có kích thước lớn hơn, cùng hiệu năng mạnh mẽ với sức mạnh đến từ Apple A15 Bionic, sẵn sàng cùng bạn chinh phục mọi thử thách.</string>
</resources>